# TinyRPC

./: CMakeLists.txt  README.md
example/: frend.pb.cc  frend.pb.h  user.pb.cc  user.pb.h  user.proto
example/callee/: CMakeLists.txt  friendservice.cpp  userservice.cpp
example/caller/: CMakeLists.txt  calluserservice.cpp
src/: CMakeLists.txt  Lockqueue.cpp  Logger.cpp  mprpcapplication.cpp  mprpcchannel.cpp  mprpcconfig.cpp  mprpccontroller.cpp  rpcheader.pb.cc  rpcprovider.cpp  zookeeperutil.cpp
src/include/: Lockqueue.h  Logger.h  mprpcapplication.h  mprpcchannel.h  mprpcconfig.h  mprpccontroller.h  rpcheader.pb.h  rpcprovider.h  zookeeperutil.h
test/protobuf/: a.out  main.cpp  main2.cpp  test.pb.cc  test.pb.h  test2.pb.cc  test2.pb.h  test2.proto  test3.pb.cc  test3.pb.h  test3.proto
