cmake_minimum_required(VERSION 3.0)
project(Rpc)

set(CMAKE_BUILD_RPATH "Debug")
set(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)
set(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/lib)
include_directories(${PROJECT_SOURCE_DIR}/src/include)
link_directories(${PROJECT_SOURCE_DIR}/lib)
add_subdirectory(src)
add_subdirectory(example)